--- a/MidtermProject/views/dbresponse.html
+++ b/MidtermProject/views/dbresponse.html
@@ -92,7 +92,11 @@
     }
    </Script>
 
-<div id="mainRes">
+<div id="mainRes"
+   style="background-color:rgba(255,255,255,0.9)"
+   >
+   
+   <div>
     <canvas id="myChart"></canvas>
 
     {{#if dbresponse}}
@@ -104,7 +108,7 @@
             <br>
         {{/all}}
     {{/if}}
-
+  </div>
 </div>
 
 
