--- a/MidtermProject/views/index.html
+++ b/MidtermProject/views/index.html
@@ -1,7 +1,7 @@
 <div id="mainRes">
 
 
-<a href="/createEvent">Create your Activities</a>
+<a href="/createEvent" style="font-size:1.5em; color: rgb(255,255,255)">Create your Activities</a>
 
 </div>
 
