--- a/MidtermProject/views/layout/layout.html
+++ b/MidtermProject/views/layout/layout.html
@@ -4,8 +4,9 @@
 
 
 <head>
-    <title>Monster Mash - Create Your Monster!</title>
-    <link rel="stylesheet" type="text/css" href="../../css/layout.css">
+    <title>Let's see how did you spend your weekdays</title>
+    <link rel="stylesheet" type="text/css" href="../../css/layout.css"
+    >
 </head>
 
 <body>
